# cnn-metal

./: .gitignore  CMakeLists.txt  README.md  dataloader.cc  main.cc  tensor.cc  tensor.hpp
metal-cpp/: README.md
metal-cpp/SingleHeader/: Metal.hpp
src/: context.cc  context.hpp  layers.cc  layers.hpp  main.cc  main_metal.cc  metal_cpp_impl.cc  model.hpp  ops.metal  test.cc  types.hpp
